[metadata]
name = wikinetworks
version = 0.0.9
author = Mukta G. Palshikar
author_email = muktapalshikar@gmail.com
description = A user-friendly Python package to process pathways from the WikiPathways database into machine-readable network representations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Thakar-Lab/WikiNetworks
project_urls =
    Bug Tracker = https://github.com/Thakar-Lab/WikiNetworks/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    setuptools>=57.4.0,
    wheel>=0.37.0,
    networkx>=2.5,
    beautifulsoup4>=4,
    requests>=2,
    bioservices>=1.7,
    numpy>=1.19,
    shapely>=1.7,
    scipy>=1.5,
    pandas>=1.1,
    fiona>=1.8,
    pyproj>=3,
    rtree>=0.9,
    geopandas>=0.9,
    matplotlib>=3,
    seaborn>=0.11.1
setup_requires =
    setuptools>=57.4.0,
    wheel>=0.37.0,
    networkx>=2.5,
    beautifulsoup4>=4,
    requests>=2,
    bioservices>=1.7,
    numpy>=1.19,
    shapely>=1.7,
    scipy>=1.5,
    pandas>=1.1,
    fiona>=1.8,
    pyproj>=3,
    rtree>=0.9,
    geopandas>=0.9,
    matplotlib>=3,
    seaborn>=0.11.1
[options.packages.find]
where = src